apps/base/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    homelab.io/app: "true"
